refactor SearchService: refactore code, extract equal logic to method